[gd_scene load_steps=4 format=2]

[ext_resource path="res://meteors/meteorSmall.png" type="Texture" id=1]
[ext_resource path="res://meteors/Meteors.gd" type="Script" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 40, 0, 0, 0, 0, 0, 40, 0, 0, 0, 0, 0, 40, 0, 0, 0, 0, 0, 472, 0, 0, 0, 0, 0, 40, 0 )
}

[node name="SmallMeteors" type="RigidBody2D"]
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="Small" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="SmallShape" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -16, -16, -16, -16, -24, 8, -24, 8, -8, 16, -8, 16, 0, 24, 0, 24, 24, 0, 24, 0, 16, -16, 16, -16 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false

[node name="MeteorPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MeteorSpawnLocation" type="PathFollow2D" parent="MeteorPath"]
position = Vector2( 40, 0 )

[connection signal="body_entered" from="." to="." method="_on_SmallMeteors_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
